<?xml version="1.0" encoding="utf-8"?>
<TableLayout
		android:id="@+id/abouttable"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:background="@drawable/background_settings"
		android:paddingLeft="5dp"
		android:paddingRight="5dp">
	<TableRow
			android:id="@+id/versionrow"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingBottom="10dp">
		<TextView
				android:id="@+id/versiondesc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/version"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@color/fontcolor"/>
		<TextView
				android:id="@+id/version"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@color/fontcolor"/>
	</TableRow>
	<TableRow
			android:id="@+id/coderow"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingBottom="10dp">
		<TextView
				android:id="@+id/codedesc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/code"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@color/fontcolor"/>
		<TextView
				android:id="@+id/code"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@color/fontcolor"/>
	</TableRow>
	<TableRow
			android:id="@+id/graphicrow"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingBottom="10dp">
		<TextView
				android:id="@+id/graphicdesc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/graphics"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@color/fontcolor"/>
		<TextView
				android:id="@+id/graphic"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@color/fontcolor"/>
	</TableRow>
	<TableRow
			android:id="@+id/websiterow"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingBottom="10dp">
		<TextView
				android:id="@+id/websitedesc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/website"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@color/fontcolor"/>
		<TextView
				android:id="@+id/website"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autoLink="web"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@color/fontcolor"/>
	</TableRow>
	<TableRow
			android:id="@+id/contactrow"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingBottom="10dp">
		<TextView
				android:id="@+id/contactdesc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/contact"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@color/fontcolor"/>
		<TextView
				android:id="@+id/contact"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autoLink="email"
				android:textAppearance="?android:attr/textAppearanceMedium"/>
	</TableRow>
	<TableRow
			android:id="@+id/githubrow"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingBottom="10dp">
		<TextView
				android:id="@+id/githubdesc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/github"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@color/fontcolor"/>
		<TextView
				android:id="@+id/github"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autoLink="web"
				android:textAppearance="?android:attr/textAppearanceMedium"/>
	</TableRow>
</TableLayout>
