<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/anti_flash_white"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        >

    <LinearLayout
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            <TextView
                    android:id="@+id/menu_overview_list_item_name"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:singleLine="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@+id/menu_overview_list_item_price"
                    android:layout_toStartOf="@+id/menu_overview_list_item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            <TextView
                    android:id="@+id/menu_overview_list_item_price"
                    android:textColor="@color/crayon_orange"
                    android:textSize="16sp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            <TextView
                    android:id="@+id/menu_overview_list_item_description"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@+id/menu_overview_list_indicator_area"
                    android:layout_toStartOf="@+id/menu_overview_list_indicator_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            <LinearLayout
                    android:id="@+id/menu_overview_list_indicator_area"
                    android:orientation="horizontal"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp">

                <ImageView
                        android:id="@+id/menu_overview_list_indicator_bio"
                        android:contentDescription="@string/bio"
                        android:visibility="gone"
                        android:src="@drawable/biosiegel"
                        android:padding="2dp"
                        android:layout_width="16dp"
                        android:layout_height="match_parent"
                        />

                <ImageView
                        android:id="@+id/menu_overview_list_indicator_vegetarian"
                        android:contentDescription="@string/vegetarian"
                        android:visibility="gone"
                        android:src="@drawable/vegetarischsiegel"
                        android:padding="2dp"
                        android:layout_width="16dp"
                        android:layout_height="match_parent"
                        />

                <ImageView
                        android:id="@+id/menu_overview_list_indicator_vegan"
                        android:contentDescription="@string/vegan"
                        android:visibility="gone"
                        android:src="@drawable/vegansiegel"
                        android:padding="2dp"
                        android:layout_width="16dp"
                        android:layout_height="match_parent"
                        />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>